fix overflow display on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh; }
+
 body {
   width: 100vw;
   height: 100vh;
@@ -127,16 +132,17 @@ a {
 
 .body {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 65px);
   background: url("./pictures/body-builder.jpg") no-repeat top/cover;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative; }
 
 .form {
   width: 30%;
-  height: 35%;
-  margin-top: 15vh;
+  height: 45%;
+  margin-bottom: 15vh;
   position: relative; }
   .form__switches {
     width: 100%;
@@ -270,9 +276,6 @@ a {
         font-size: 3.3em; } }
 
 .current {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-55%);
   background-color: rgba(94, 0, 0, 0.8);
   width: 50vw;
   height: 70%;
@@ -352,8 +355,6 @@ a {
 
 .select-data, .chosen-data {
   position: absolute;
-  top: 50%;
-  transform: translateY(-55%);
   width: 60%;
   height: 70%;
   background-color: rgba(94, 0, 0, 0.8);
@@ -479,29 +480,40 @@ a {
 
 .history {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center; }
   .history__tabs {
     width: 80%;
-    height: 70%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    overflow-y: auto;
-    margin-bottom: 5%; }
+    overflow-y: auto; }
     .history__tabs .history__tab {
       width: 260px;
       height: 200px;
       margin: 3% 3%;
       background-color: rgba(94, 0, 0, 0.7);
       border-radius: 10px;
-      color: white; }
+      color: white;
+      position: relative;
+      z-index: 0; }
       .history__tabs .history__tab .tab__header {
         font-size: 20px;
         text-align: center;
         padding: 4% 0 1%; }
+      .history__tabs .history__tab .tab__number {
+        position: absolute;
+        right: 2%;
+        top: 5%;
+        user-select: none;
+        color: black;
+        font-size: 100px;
+        font-family: "Black Ops One", cursive;
+        z-index: -1; }
       .history__tabs .history__tab .tab__section {
         display: flex;
         align-items: center;
