--- a/client/src/scss/add-data.scss
+++ b/client/src/scss/add-data.scss
@@ -1,8 +1,6 @@
 .select-data
 {
     position: absolute;
-    top: 50%;
-    transform: translateY(-55%);
     width: 60%;
     height: 70%;
     background-color: rgba($color: $main-contrastColor, $alpha: .8);
