--- a/client/src/scss/current.scss
+++ b/client/src/scss/current.scss
@@ -1,8 +1,5 @@
 .current
 {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-55%);
     background-color: rgba($color: $main-contrastColor, $alpha: .8);
     width: 50vw;
     height: 70%;
