--- a/client/src/scss/form.scss
+++ b/client/src/scss/form.scss
@@ -1,8 +1,8 @@
 .form
 {
     width: 30%;
-    height: 35%;
-    margin-top: 15vh;
+    height: 45%;
+    margin-bottom: 15vh;
     position: relative;
 
     &__switches
